<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="Screen1ViewModel"
            type="com.waysideutilities.mirrarcalculator.viewmodel.Screen1ViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_marginBottom="?attr/actionBarSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/req_calculator"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iPad"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_margin="2dp"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="5">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_9_7"
                        android:id="@+id/cb_9_7"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_9_7}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_9_7()}"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_2"
                        android:id="@+id/cb_10_2"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_10_2}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_10_2()}"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_5"
                        android:id="@+id/cb_10_5"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_10_5}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_10_5()}"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_11"
                        android:id="@+id/cb_11"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_11}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_11()}"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_9"
                        android:id="@+id/cb_12_9"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_12_9}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_12_9()}"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stand"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_margin="2dp"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/table_top"
                        android:id="@+id/cb_table_top"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_table}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_Table()}"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/_kiosk"
                        android:id="@+id/cb_kiosk"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_kiosk}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_Kiosk()}"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_margin="2dp"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/mi"
                        android:id="@+id/cb_mi"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_mi}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_Mi()}"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/samsung"
                        android:id="@+id/cb_samsung"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_samsung}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_Samsung()}"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mac_mini"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_margin="2dp"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="38000"
                        android:id="@+id/cb_38000"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_38000}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_38000()}"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="700000"
                        android:id="@+id/cb_70000"
                        android:layout_margin="2dp"
                        android:checked="@={Screen1ViewModel.cb_70000}"
                        android:onClick="@{() -> Screen1ViewModel.onClickCB_70000()}"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/processed_images"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_margin="2dp"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.125"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="0"
                        android:gravity="right"/>

                    <SeekBar
                        android:layout_width="0dp"
                        android:layout_weight="0.75"
                        android:layout_height="wrap_content"
                        android:id="@+id/seekBar"
                        android:min="0"
                        android:max="1000"
                        android:onProgressChanged="@{Screen1ViewModel.onValueChanged}"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.125"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="1000"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/total" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/txt_total"
                        android:text="@={Screen1ViewModel.total_amount}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_next"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="Next"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:onClick="@{(v) -> Screen1ViewModel.onClick(v)}"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="15dp"/>

    </RelativeLayout>
</layout>